linkeados los autos

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -59,14 +59,6 @@
     </header>
     <main id="tieAutMain">
         <div id="tieAutMain__cosasJS">
-            <div id="tieAutMain__cosasJS--contenedorBusqueda">
-                <div id="tieAutMain__cosasJS--contenedorBusqueda--busqueda">
-                    <input type="text" placeholder="Buscar..." id="tieAutMain__cosasJS--contenedorBusqueda--busqueda--busquedaInput" oninput="filterDivs()">
-                    <div id="tieAutMain__cosasJS--contenedorBusqueda--busqueda--botonBusqueda">
-                        <span><i class="fa fa-search"></i></span>
-                    </div>
-                </div>
-            </div>
             <div id="tieAutMain__cosasJS--filtros">
                 <button id="tieAutMain__cosasJS--filtros--barraDeFiltros">☰</button>
 
@@ -158,6 +150,14 @@
                                 <span class="tieAutMain__cosasJS--filtros--sidebar--opciones--interruptor--slider"></span>
                             </label>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div id="tieAutMain__cosasJS--contenedorBusqueda">
+                <div id="tieAutMain__cosasJS--contenedorBusqueda--busqueda">
+                    <input type="text" placeholder="Buscar..." id="tieAutMain__cosasJS--contenedorBusqueda--busqueda--busquedaInput" oninput="filterDivs()">
+                    <div id="tieAutMain__cosasJS--contenedorBusqueda--busqueda--botonBusqueda">
+                        <span><i class="fa fa-search"></i></span>
                     </div>
                 </div>
             </div>
@@ -372,7 +372,7 @@
             </div>
             <div id="tieAutMain__catalogo--marcas--renault" class="tieAutMain__catalogo--marcas renault">
                 <h2>Renault</h2>
-                <div id="tieAutMain__catalogo--marcas--renault--1" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaFosil men40m">
+                <div id="tieAutMain__catalogo--marcas--renault--1" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaFosil men40m"><a href="autos-productos/4Renault/prod-1.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/renSTEPWAY.png" alt="">
                     </div>
@@ -393,8 +393,8 @@
                             <p>Su parrilla frontal cromada, su nuevo volante con estilo deportivo y su nuevo motor HR16 se acoplan perfectamente, tanto en circuitos urbanos como en ruta.</p>
                         </div>
                     </div>
-                </div>
-                <div id="tieAutMain__catalogo--marcas--renault--2" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil men40m">
+                </a></div>
+                <div id="tieAutMain__catalogo--marcas--renault--2" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil men40m"><a href="autos-productos/4Renault/prod-3.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/renDUSTER.png" alt="">
                     </div>
@@ -415,8 +415,8 @@
                             <p>Sus nuevas líneas mas agresivas, parrilla negro brillante, faros delanteros LED con DLR integrado, su espacio de baúl de hasta 475L te ayudan a desenvolverte en cualquier situación</p>
                         </div>
                     </div>
-                </div>
-                <div id="tieAutMain__catalogo--marcas--renault--3" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil men40m">
+                </a></div>
+                <div id="tieAutMain__catalogo--marcas--renault--3" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil men40m"><a href="autos-productos/4Renault/prod-2.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/renKANGOO.png" alt="">
                     </div>
@@ -437,11 +437,11 @@
                             <p>El control de velocidad crucero, su maletero de 800[L] que puede alcanzar los 3000[L] rebatiendo los asientos traseros y su seguridad lo hacen perfecto para viajar acompañado</p>
                         </div>
                     </div>
-                </div>
+                </a></div>
             </div>
             <div id="tieAutMain__catalogo--marcas--ford" class="tieAutMain__catalogo--marcas ford">
                 <h2>Ford</h2>
-                <div id="tieAutMain__catalogo--marcas--ford--1" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaFosil men40m">
+                <div id="tieAutMain__catalogo--marcas--ford--1" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaFosil men40m"><a href="autos-productos/5Ford/prod-1.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/fordSUV'STERRITORY.png" alt="">
                     </div>
@@ -462,8 +462,8 @@
                             <p>Debido a sus espejos laterales rebatibles eléctricamente, barras de techo longitudinales, techo solar panorámico y tapizado de cuero microperforado, es perfecto para cualquier aventura</p>
                         </div>
                     </div>
-                </div>
-                <div id="tieAutMain__catalogo--marcas--ford--2" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaEléctrica mas80m">
+                </a></div>
+                <div id="tieAutMain__catalogo--marcas--ford--2" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaEléctrica mas80m"><a href="autos-productos/5Ford/prod-2.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/fordMUSTANG MACH-E.jpg" alt="">
                     </div>
@@ -484,8 +484,8 @@
                             <p>Además de un baúl trasero de 402 [L], cuanta con uno delantero de 139.5 [L]; sus puertas se abren con un botón, asi puedes entrar aún con cosas en la mano</p>
                         </div>
                     </div>
-                </div>
-                <div id="tieAutMain__catalogo--marcas--ford--3" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaHíbrida mas80m">
+                </a></div>
+                <div id="tieAutMain__catalogo--marcas--ford--3" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaHíbrida mas80m"><a href="autos-productos/5Ford/prod-3.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/fordNUEVA F-150 LARIAT.jpg" alt="">
                     </div>
@@ -506,11 +506,11 @@
                             <p>Su parrilla prominente, cromada y divida en dos demuestra su robustez y tradicionalidad y sus focos en forma de cuadrado le dan cuerpo al frente</p>
                         </div>
                     </div>
-                </div>
+                </a></div>
             </div>
             <div id="tieAutMain__catalogo--marcas--fiat" class="tieAutMain__catalogo--marcas fiat">
                 <h2>Fiat</h2>
-                <div id="tieAutMain__catalogo--marcas--fiat--1" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil men40m">
+                <div id="tieAutMain__catalogo--marcas--fiat--1" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil men40m"><a href="autos-productos/6Fiat/prod-1.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/fiatPULSE.jpg" alt="">
                     </div>
@@ -531,8 +531,8 @@
                             <p>Su parrilla prominente y tosca, junto con sus focos delanteros diagonales, dan una sensacion agresiva y brusca y sus focos traseros acompañan con su diseño horizontal</p>
                         </div>
                     </div>
-                </div>
-                <div id="tieAutMain__catalogo--marcas--fiat--2" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaFosil men40m">
+                </a></div>
+                <div id="tieAutMain__catalogo--marcas--fiat--2" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaFosil men40m"><a href="autos-productos/6Fiat/prod-2.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/fiatFASTBACK.jpg" alt="">
                     </div>
@@ -553,8 +553,8 @@
                             <p>Combina la silueta de un sedán, una cupé y un SUV con un diseño frontal pasivo pero con lineas marcadas. Tiene 6 velocidades, espacio para 5 personas y 600 a 1000[L] de baúl</p>
                         </div>
                     </div>
-                </div>
-                <div id="tieAutMain__catalogo--marcas--fiat--3" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil men40m">
+                </a></div>
+                <div id="tieAutMain__catalogo--marcas--fiat--3" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil men40m"><a href="autos-productos/6Fiat/prod-3.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/fiatTORO.jpg" alt="">
                     </div>
@@ -575,11 +575,11 @@
                             <p>Su forma caracteristica de PickUp le da su aspecto de "Camionetita" pero sus lineas curvadas y tranquilas le da su toque de no-agresividad</p>
                         </div>
                     </div>
-                </div>
+                </a></div>
             </div>
             <div id="tieAutMain__catalogo--marcas--nissan" class="tieAutMain__catalogo--marcas nissan">
                 <h2>Nissan</h2>
-                <div id="tieAutMain__catalogo--marcas--nissan--1" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaFosil men40m">
+                <div id="tieAutMain__catalogo--marcas--nissan--1" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoNO energíaFosil men40m"><a href="autos-productos/7Nissan/prod-1.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/nissanVERSA.jpg" alt="">
                     </div>
@@ -600,8 +600,8 @@
                             <p>Su parrilla frontal en forma de lineas unidas a los focos frontales dan un aspecto continuo al frente y con 5 velocidades y un baúl de 482[L] busca darte toda la comodidad</p>
                         </div>
                     </div>
-                </div>
-                <div id="tieAutMain__catalogo--marcas--nissan--2" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil 40-80m">
+                </a></div>
+                <div id="tieAutMain__catalogo--marcas--nissan--2" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil 40-80m"><a href="autos-productos/7Nissan/prod-2.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/nissanFRONTIER.jpg" alt="">
                     </div>
@@ -622,8 +622,8 @@
                             <p>Su frente tiene todas las caracteristicas del tipo agresivas, una parrilla en forma de panal unido a focos alargados pero robustos y luces laterales semi cuadradas</p>
                         </div>
                     </div>
-                </div>
-                <div id="tieAutMain__catalogo--marcas--nissan--3" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil 40-80m">
+                </a></div>
+                <div id="tieAutMain__catalogo--marcas--nissan--3" class="tieAutMain__catalogo--marcas--autos energíaAmbas todoterrenoAmbas precioTodos todoterrenoSI energíaFosil 40-80m"><a href="autos-productos/7Nissan/prod-3.html">
                     <div class="tieAutMain__catalogo--marcas--Img">
                         <img src="../../assets/imagenes/tienda/autos/nissanX-TRAIL.jpg" alt="">
                     </div>
@@ -644,7 +644,7 @@
                             <p>Cn espacio para hasta 8 pasajeros y asientos de la 3ra y 2da fila revatibles te da la opción de tener 600[L] o 1300[L] con los asientos rebatidos</p>
                         </div>
                     </div>
-                </div>
+                </a></div>
             </div>
         </div>
     </main>
