mejorados los botones de volver (ahora te llevan a la seccion de su marca en la pagina de venta)

--- a/paginas/tienda/autos-productos/1Chevrolet/prod-2.html
+++ b/paginas/tienda/autos-productos/1Chevrolet/prod-2.html
@@ -51,7 +51,7 @@
 
             <div class="col-lg-6 col-md-12 col-sm-12 prods__info">
                 <div class="prods__volver">
-                    <a href="../../autos.html">Volver</a>
+                    <a href="../../autos.html#tieAutMain__catalogo--marcas--chevrolet">Volver</a>
                 </div>
                 <h2>Chevrolet CRUZE 5</h2>
                 <table>
