--- a/paginas/tienda/autos-productos/7Nissan/prod-2.html
+++ b/paginas/tienda/autos-productos/7Nissan/prod-2.html
@@ -71,7 +71,7 @@
 
             <div class="col-lg-6 col-md-12 col-sm-12 prods__info">
                 <div class="prods__volver">
-                    <a href="../../autos.html">Volver</a>
+                    <a href="../../autos.html#tieAutMain__catalogo--marcas--nissan">Volver</a>
                 </div>
                 <h2>Nissan FRONTIER</h2>
                 <table>
