--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -17,7 +17,7 @@
     <title>Venta De Autos - Drive & Dream</title>
 </head>
 <body>
-    <header id="header-nosotros">
+    <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand me-auto" href="../index.html">
