depurada chiquita y botón de venda su auto

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -647,6 +647,11 @@
                 </a></div>
             </div>
         </div>
+        <div id="tieAutMain__vendaSuAuto">
+            <button>
+                <a href="../VentaAuto.html"><h3>Venda Su Auto</h3></a>
+            </button>
+        </div>
     </main>
     <footer>
         <div class="footerContainer">
