--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="paginas/tienda/autos.html">Productos</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link mx-lg-2" href="paginas/VentaAuto.html">Venda su auto</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
