cambio a todos los navs para q no tengan el negro

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -42,7 +42,7 @@
                                 <a class="nav-link mx-lg-2" href="../cliente.html">Servicio al cliente</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2 active" active aria-current="page" href="../tienda/autos.html">Productos</a>
+                                <a class="nav-link mx-lg-2 active"aria-current="page" href="../tienda/autos.html" id="menu-current-page">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="../VentaAuto.html">Venda su auto</a>
