--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -29,7 +29,7 @@
                             <a class="nav-link mx-lg-2" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2 active" active aria-current="page" href="nosotros.html">Nosotros</a>
+                            <a class="nav-link mx-lg-2 active" aria-current="page" id="menu-current-page" href="nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="cliente.html">Contacto</a>
