"Servicio al cliente" agregado a las paginas

--- a/paginas/VentaAuto.html
+++ b/paginas/VentaAuto.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link mx-lg-2" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="cliente.html">Contacto</a>
+                                <a class="nav-link mx-lg-2" href="cliente.html">Servicio al cliente</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="tienda/autos.html">Productos</a>
