--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -32,7 +32,7 @@
                             <a class="nav-link mx-lg-2 active" aria-current="page" id="menu-current-page" href="nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="cliente.html">Contacto</a>
+                            <a class="nav-link mx-lg-2" href="cliente.html">Servicio al cliente</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="tienda/autos.html">Productos</a>
