--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
             <div class="footerNav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">Productos</a></li>
-                    <li><a href="#">Ubicación</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="paginas/nosotros.html">Nosotros</a></li>
+                    <li><a href="paginas/cliente.html">Servicio al cliente</a></li>
+                    <li><a href="paginas/tienda/autos.html">Productos</a></li>
+                    <li><a href="paginas/VentaAuto.html">Venda su auto</a></li>
                 </ul>
             </div>
         </div>
