--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -140,11 +140,11 @@
             </div>
             <div class="footerNav">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="">Productos</a></li>
-                    <li><a href="#">Ubicación</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="cliente.html">Servicio al cliente</a></li>
+                    <li><a href="tienda/autos.html">Productos</a></li>
+                    <li><a href="VentaAuto.html">Venda su auto</a></li>
                 </ul>
             </div>
         </div>
