--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -128,13 +128,13 @@
             <a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
         </div>
         <div class="footerNav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="">Productos</a></li>
-                <li><a href="#">Ubicación</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Nosotros</a></li>
-            </ul>
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
+            <li><a href="cliente.html">Servicio al cliente</a></li>
+            <li><a href="tienda/autos.html">Productos</a></li>
+            <li><a href="VentaAuto.html">Venda su auto</a></li>
+          </ul>
         </div>
     </div>
     <div class="footerBottom">
