--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nosotros - Drive & Dream</title>
   <link rel="stylesheet" href="../css/main.css">
+  <meta name="keywords" content="auto, autos, concesionaria, concesionarias, ford, chevrolet, nissan, audi, fiat, honda, renault, novedad, tecnología, 4x4, 4x2, traccion delantera, traccion trasera, uzalcristianalan">
+  <meta name="description" content="Quienes somos? Somos Drive & Dream. Averigue sobre nosotros">
 </head>
 <body id="cuerpo">
   <header id="header-nosotros">
