--- a/paginas/sesion.html
+++ b/paginas/sesion.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
     <title>Registrarse - Drive & Dream</title>
+    <meta name="keywords" content="auto, autos, concesionaria, concesionarias, ford, chevrolet, nissan, audi, fiat, honda, renault, novedad, tecnología, 4x4, 4x2, traccion delantera, traccion trasera, uzalcristianalan">
+    <meta name="description" content="Inicie sesion en Drive & Dream">
 </head>
 <body id="body__Registro">
     <div class="form-body">
