--- a/paginas/VentaAuto.html
+++ b/paginas/VentaAuto.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="auto, autos, concesionaria, concesionarias, ford, chevrolet, nissan, audi, fiat, honda, renault, novedad, tecnología, 4x4, 4x2, traccion delantera, traccion trasera, uzalcristianalan">
+    <meta name="description" content="Venda su auto en Drive & Dream, y recupera tu dinero">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
     <title>Vender auto - Drive & Dream</title>
 </head>
