--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
     <title>Servicio al cliente - Drive & Dream</title>
+    <meta name="keywords" content="auto, autos, concesionaria, concesionarias, ford, chevrolet, nissan, audi, fiat, honda, renault, novedad, tecnología, 4x4, 4x2, traccion delantera, traccion trasera, uzalcristianalan">
+    <meta name="description" content="Tiene algun problema o duda? En nuestro servicio al cliente - Drive & Dream aclare sus dudas">
 </head>
 <body id="BodyCliente">
     <header>
