--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="../../css/main.css">
     <link rel="icon" href="../../assets/imagenes/logo/logo.png">
 
-    <meta name="description" content="...">
-    <meta name="keywords" content="...">
+    <meta name="description" content="Seccion de compra de la consecionaria Drive & Dream, encuentra tu auto ideal al mejor precio">
+    <meta name="keywords" content="auto, autos, concesionaria, concesionarias, ford, chevrolet, nissan, audi, fiat, honda, renault, novedad, tecnología, 4x4, 4x2, traccion delantera, traccion trasera, uzalcristianalan">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
