--- a/paginas/tienda/autos-productos/5Ford/prod-1.html
+++ b/paginas/tienda/autos-productos/5Ford/prod-1.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../../../assets/imagenes/logo/logo.png">
+    <meta name="keywords" content="auto, autos, concesionaria, concesionarias, ford, territory">
     <title>Ford SUV'STERRITORY</title>
 </head>
 <body class="prods__body">
