--- a/paginas/sesion.html
+++ b/paginas/sesion.html
@@ -5,21 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
-    <title>Registrarse - Drive & Dream</title>
+    <title>Iniciar sesion - Drive & Dream</title>
     <meta name="keywords" content="auto, autos, concesionaria, concesionarias, ford, chevrolet, nissan, audi, fiat, honda, renault, novedad, tecnología, 4x4, 4x2, traccion delantera, traccion trasera, uzalcristianalan">
-    <meta name="description" content="Inicie sesion en Drive & Dream">
+    <meta name="description" content="registrese en Drive & Dream">
 </head>
 <body id="body__Registro">
     <div class="form-body">
+
         <img src="../assets/imagenes/logo/logo.png" alt="user-login">
         <p class="text">Iniciar sesion en Drive & Dream</p>
         <form class="login-form">
-            <input type="email" placeholder="Nombre">
-            <input type="password" placeholder="Apellido">
-            <input type="text" placeholder="Email">
-            <input type="text" placeholder="Contraseña">
-            <a href="../paginas/registro.html" id="link">Ya tengo cuenta</a>
-            <button><a href="../index.html">Iniciar Sesion</a></button>
+            <input type="text" placeholder="email o nombre de usuario">
+            <input type="password" placeholder="Contraseña">
+            <a href="../paginas/registro.html" id="link">No tienes cuenta? Registrarse</a>
+            <button type="submit"> <a href="../index.html">Iniciar Sesion</a></button>
         </form>
     </div>
 
