--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -46,7 +46,7 @@
                         </ul>
                     </div>
                 </div>
-                <a href="./paginas/registro.html" class="login-button">Login</a>
+                <a href="sesion.html" class="login-button">Login</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
