--- a/paginas/sesion.html
+++ b/paginas/sesion.html
@@ -15,7 +15,7 @@
         <img src="../assets/imagenes/logo/logo.png" alt="user-login">
         <p class="text">Iniciar sesion en Drive & Dream</p>
         <form class="login-form">
-            <input type="text" placeholder="email o nombre de usuario">
+            <input type="text" placeholder="Email o nombre de usuario">
             <input type="password" placeholder="Contraseña">
             <a href="../paginas/registro.html" id="link">No tienes cuenta? Registrarse</a>
             <button type="submit"> <a href="../index.html">Iniciar Sesion</a></button>
